deploy/personal-website-server.yaml
apiVersion: apps/v1             # Deployment
kind: Deployment
metadata:
  name: personal-website-server
  labels:
    app: personal-website
spec:
  replicas: 1                   # ReplicaSet
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:                   # Pod
      labels:
        app: personal-website
    spec:
      containers:
      - name: personal-website-container
        image: nathaniel515/personal_website:1.3
        ports:
        - name: website-port
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "250Mi"
            cpu: "200m"
        startupProbe:
          tcpSocket:
            port: website-port
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: website-port
          failureThreshold: 1
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: website-port
          failureThreshold: 1
          periodSeconds: 15
