deploy/personal-website-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-svc
spec:
  type: ClusterIP
  selector:
    app: personal-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
